alignment issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1107,7 +1107,7 @@ img {
   .project__container,
   .contact__container,
   .footer__container {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 
   .qualification__sections {
@@ -1193,9 +1193,9 @@ img {
 
   .about__container {
     column-gap: 5rem;
+    display: flex;
     justify-content: center;
     align-items: center;
-    display: flex;
   }
 
   .about__img {
